# reactor-desktop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_MAPPING.md  LICENSE  README.md  RELEASE_CRITERIA.md  ROADMAP_V1.md  SECURITY.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  sync-upstream.yml  upstream-sync.yml
docs/: ARCHITECTURE.md  CAPABILITY_MODEL.md  ICONS.md  ISSUE_IMPLEMENTATION_LOG_2026-03-22.md  ISSUE_IMPLEMENTATION_LOG_2026-03-31.md  PACKAGES.md  PACKAGE_CAPABILITY_TEMPLATE.md  PERMISSIONS.md  RELEASES.md  THEMES_DESKTOP_MAPPING.md
issues/: chat-ui-polish-checklist-temp.md  feature-terminal-integration.md
src/: desktop-updates.ts  main.ts  recommended-packages.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/auth/: provider-auth.ts
src/commands/: slash-command-catalog.ts
src/components/: chat-view.ts  command-palette.ts  content-tabs.ts  extension-ui-handler.ts  extensions-panel.ts  file-drag-transfer.ts  file-viewer.ts  login-panel.ts  model-selector.ts  packages-view.ts  session-browser.ts  settings-panel.ts  shortcuts-panel.ts  sidebar.ts  terminal-panel.ts  titlebar.ts  workspace-tabs.ts
src/models/: model-selection.ts
src/rpc/: bridge.ts
src/styles/: app.css
sync/: reapply-overrides.sh
(+9 files in other folders)
