[package]
name = "pi-desktop"
version = "0.1.0"
description = "Pi Desktop - A minimal coding agent desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "pi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "8"
